--- a/Angular/app/Layouts/public-layout.component.html
+++ b/Angular/app/Layouts/public-layout.component.html
@@ -1,7 +1,7 @@
     <div class="row no-gutter">
         <div class="col-lg-1 visible-lg" style="background-color: #000; height:100%"></div>
 
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10" style="background-color: #F1F1E4">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10" style="background-color: #FFF">
             <!--HEADER -->
             <public-header></public-header>
             
@@ -19,7 +19,7 @@
                     <!--PRODUCT SEARCH-->
                     <product-search></product-search>
                 </div>
-                <div id="BodyContent" class="col-lg-6 col-md-6 col-sm-9 col-xs-12" style="padding-left: 0; padding-right: 0; background-color: #fff">
+                <div id="BodyContent" class="col-lg-6 col-md-6 col-sm-9 col-xs-12" style="padding-left: 0; padding-right: 0;">
                     <router-outlet></router-outlet>
                 </div>
                 <div id="OnTheRoad" class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0; min-height:100%; background: #F1F1E4; height: 1250px;border-left: 1px dotted #000">
