move styles into css file

--- a/Angular/app/Content/search-results/search-results.component.html
+++ b/Angular/app/Content/search-results/search-results.component.html
@@ -1,8 +1,7 @@
-<div style="text-align: center; padding: 10px;">
+<div id="SearchResults">
 
-    <div style="padding:20px">
+    <div>
 
-        <!--<pagination-controls (pageChange)="p = $event"></pagination-controls>-->
         <pagination-controls  class="my-pagination"
                       (pageChange)="p = $event"
                       maxSize="10"
@@ -16,14 +15,14 @@
         </pagination-controls>
 
     </div>
-    <div *ngFor="let product of products | paginate: { itemsPerPage: 10, currentPage: p, totalItems: 200 }" style="width:125px; display: inline-block; vertical-align: top; border-bottom: 1px dotted #000">
+    <div class="item" *ngFor="let product of products | paginate: { itemsPerPage: 10, currentPage: p, totalItems: 40 }">
         <div style="height: 140px;">
-            <img src="{{product.ImageUrl}}" alt="" style="width: 100%; position: relative;top: 50%;transform: translateY(-50%);"> 
+            <img class="item-img" src="{{product.ImageUrl}}" alt="{{product.Name}}"> 
         </div>
         <div style="height: 150px;">
-            <label style="font-weight:bold">Price: {{product.RetailPrice | currency:'USD':true:'1.2-2'}}</label> <span class="glyphicon glyphicon-zoom-in" style="color: #f08e02; font-size:20px;"></span>
-            <button class="orange" style="font-size: 10px"><span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart</button>
-            <label style="line-height: 16px">{{product.Name}}</label>
+            <label class="item-price">Price: {{product.RetailPrice | currency:'USD':true:'1.2-2'}}</label> <span class="glyphicon glyphicon-zoom-in" style="color: #f08e02; font-size:20px;"></span>
+            <button class="orange"><span class="glyphicon glyphicon-shopping-cart"></span> Add To Cart</button>
+            <label class="item-name">{{product.Name}}</label>
             
         </div>       
     </div>
