adjust nav spacing

--- a/Angular/app/Headers/public-header.component.html
+++ b/Angular/app/Headers/public-header.component.html
@@ -26,9 +26,9 @@
                 <li style="width:1.5%"><a routerLink="/search">SHOP</a></li>
                 <li><a routerLink="/support">SUPPORT</a></li>
                 <li class="nav-menu-spacer"></li>
-                <li><a routerLink="/contact-us">CONTACT US</a></li>
-                <li><a routerLink="/home">SIGN-IN</a></li>
-                <li style="width:.5%; white-space: nowrap"><a routerLink="/home">VIEW CART</a></li>
+                <li style="width:.5%"><a routerLink="/contact-us">CONTACT US</a></li>
+                <li style="width:.85%"><a routerLink="/home">SIGN-IN</a></li>
+                <li style="width:.5%; white-space: nowrap"><a routerLink="/home"><span class="glyphicon glyphicon-shopping-cart"></span> VIEW CART</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
