--- a/Angular/app/Content/search-results/search-results.component.html
+++ b/Angular/app/Content/search-results/search-results.component.html
@@ -1,5 +1,7 @@
 <div id="SearchResults">
-
+    <div *ngIf="showNotFound">
+        Your search returned no results. Please try again.
+    </div>
     <div>
 
         <pagination-controls  class="my-pagination"
@@ -7,7 +9,7 @@
                       maxSize="10"
                       directionLinks="true"
                       autoHide="true"
-                      previousLabel="Previous"
+                      previousLabel="Prev"
                       nextLabel="Next"
                       screenReaderPaginationLabel="Pagination"
                       screenReaderPageLabel="page"
@@ -15,6 +17,7 @@
         </pagination-controls>
 
     </div>
+  
     <div class="item" *ngFor="let product of products | paginate: { itemsPerPage: 10, currentPage: p }">
         <div style="height: 140px;">
             <img class="item-img" src="{{product.ImageUrl}}" alt="{{product.Name}}"> 
